# skinet-rusty

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  diesel.toml  docker-compose.yml  initial_seed.sql  openapi.yaml
.cargo/: config.toml
.github/workflows/: rust.yml
client/: angular.json  package-lock.json  package.json  tailwind.config.js
client/app/: navbar.server.tsx  root.tsx
client/app/api/: basket.ts  models.ts  products.ts
client/app/routes/: index.tsx
client/app/routes/basket/: index.tsx
client/app/routes/shop/: $productId.tsx  index.tsx
client/app/styles/: app.css
client/src/app/shared/models/: shopParams.ts
client/src/app/shop/: shop.component.ts  shop.service.ts
client/src/environments/: environment.ts
client/styles/: app.css
migrations/2022-07-07-141409_create_products/: up.sql
migrations/2022-08-15-145653_add_brands_types/: down.sql  up.sql
migrations/2022-08-15-161914_add_product_columns/: down.sql  up.sql
migrations/2022-08-21-134001_add_appuser/: down.sql  up.sql
migrations/2022-08-24-154551_add_delivery_methods/: down.sql  up.sql
migrations/2022-08-25-160616_add_order_relationships/: down.sql  up.sql
migrations/2022-09-29-135947_rename_address_columns/: down.sql  up.sql
migrations/2023-02-20-102216_change_orderstatus_to_enum/: down.sql  up.sql
src/: basket_controller.rs  controllers.rs  db.rs  identity_controller.rs  jwt.rs  main.rs  orders_controller.rs  products_controller.rs  responders.rs
src/controllers/: basket_controller.rs  identity_controller.rs  mod.rs  orders_controller.rs  products_controller.rs
src/db/: identity_functions.rs  macros.rs  mod.rs  models.rs  order_functions.rs  paginate.rs  products_functions.rs  redis.rs  schema.rs  utils.rs
