[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_redis = "0.6.1"
error-stack = { git = "https://github.com/hashintel/hash", branch = "main" }
log = "0.4.17"
env_logger = "0.9.0"
chrono = { version = "0.4.22", features = ["serde"] }
diesel = { version = "1.4.8", features = ["postgres"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.83"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
jsonwebtoken = "8"
sha-crypt = "0.4.0"