[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
diesel = { version = "1.4.8", features = ["postgres", "chrono"] }
diesel-derive-enum = { version = "2.0.0-rc.0", features = ["postgres"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.83"
actix-web = "4.1.0"
actix-files = "0.6.2"
log = "0.4.17"
env_logger = "0.9.1"
error-stack = { git = "https://github.com/hashintel/hash", rev = "10304c" }